# autogenerate-rust-api-to-typescript-and-dart

./: README.md
mobile_app/: build.yaml  pubspec.yaml
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/lib/generated_api/: openapi.swagger.chopper.dart  openapi.swagger.dart
mobile_app/open_api/: openapi.json
my_api/: Cargo.toml
my_api/src/: main.rs
web-frontend/: package-lock.json  package.json
web-frontend/src/api/: runtime.ts
web-frontend/src/api/apis/: DefaultApi.ts
web-frontend/src/routes/: +page.svelte
